--- a/Student section/Professional_chapter.css
+++ b/Student section/Professional_chapter.css
@@ -74,3 +74,21 @@ footer {
   transform: scale(1.08);
   box-shadow: 0 5px 20px rgba(148,28,52,0.13);
 }
+.navbar {
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease;
+}
+
+.navbar-nav .nav-link {
+      font-weight: 500;
+      transition: color 0.3s ease;
+}
+    
+.navbar-nav .nav-link:hover {
+      color: #941C34;
+}
+
+.navbar-brand{
+      height: 100px; 
+      width:180px;
+}
