--- a/Student section/clubs.css
+++ b/Student section/clubs.css
@@ -42,3 +42,21 @@ h2 {
   background-color: #6e151f;
   border-color: #6e151f;
 }
+.navbar {
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease;
+}
+
+.navbar-nav .nav-link {
+      font-weight: 500;
+      transition: color 0.3s ease;
+}
+    
+.navbar-nav .nav-link:hover {
+      color: #941C34;
+}
+
+.navbar-brand{
+      height: 100px; 
+      width:180px;
+}
