--- a/Faculty section/faculty.css
+++ b/Faculty section/faculty.css
@@ -35,6 +35,7 @@ body {
     height: 110px;
     border-radius: 50%;
     margin-bottom: 10px;
+    border: 4px solid #db3652;
     background: #fff;
     object-fit: cover;
 }
@@ -327,3 +328,4 @@ body {
     width: 100%;
     height: 300px;
     overflow: hidden;
+}
