--- a/Faculty section/faculty.css
+++ b/Faculty section/faculty.css
@@ -131,7 +131,7 @@ body {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    border: 6px solid #db3652;
+    border: 3px solid #db3652;
     object-fit: cover;
 }
 
@@ -371,4 +371,7 @@ footer {
 .navbar-brand{
       height: 100px; 
       width:180px;
+}
+.bg-custom{
+    background-color:#941C34;
 }
